--- a/day-10/src/styles.css
+++ b/day-10/src/styles.css
@@ -39,7 +39,6 @@ button {
   font-family: "Gloria Hallelujah", cursive;
   border: none;
   border-radius: 10px;
-  margin:0.5em 0;
 }
 .container {
   display: flex;
@@ -48,27 +47,19 @@ button {
   align-items: center;
 }
 .container__form {
-  position:absolute;
-  top:10%;
-  width: 50%;
-  min-height:500px;
-  display:flex;
-  flex-direction:column;
-  align-items: flex-start;
-  background-color:white;
-  padding: 4em;
-  border-radius:5px;
-  z-index:5;
+  width: 100%;
+  padding: 1em 0.5em;
 }
-.container__form label{
-  padding: 1em .5em 0.3em;
-}
-.container__form input{
-  width:100%;
-  height:40px;
+.container__form input,
+.container__form button {
+  height: 40px;
   border-radius: 10px;
+  margin: 0 10px;
   outline: none;
   border: none;
+}
+.container__form input {
+  width: 200px;
   font-family: "Gloria Hallelujah", cursive;
   padding: 1em;
   border: 1px solid #c7caba;
@@ -78,13 +69,16 @@ button {
 }
 .container__form input[type="number"] {
   width: 75px;
-} 
-.container__btn-add {
+}
+.container__form button {
+  font-family: "Gloria Hallelujah", cursive;
   background-color: #626f4e;
   color: white;
   padding: 0.5em 1.5em;
+  width:50%;
+  margin:1em;
 }
-.container__btn-add:hover {
+.container__form button:hover {
   background-color: #454e37;
 }
 .container__list {
@@ -113,7 +107,6 @@ button {
   font-size:9px;
   border-radius:5px;
 }
-
 .container__list__item button {
   width: 80px;
   background-color: #bc513a;
@@ -130,27 +123,4 @@ button {
 .container__list__item button:hover,
 .container__delete-btn:hover {
   background-color: #843929;
-}
-
-.container__btn-add{
-  width: 100%;
-  height:auto;
-  padding:1em;
-}
-
-.container__form__btn-container{
-  width:100%;
-  display:flex;
-  gap:1em;
-  margin: 1em 0;
-}
-.container__btn-cancel{
-  background-color:white;
-  color: #bc513a;
-  border: 1px solid #bc513a;
-  padding:1em;
-}
-.container__btn-cancel:hover{
-  background-color:#bc513a;
-  color: white;
 }
